# usecase_ml

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
src/industrial_ml_projects/: __init__.py  common.py  run_all.py
src/industrial_ml_projects/projects/: __init__.py  distributed_eta.py  dropbox.py  gnn_xgb_fraud.py  instacart.py  item_availability.py  llm_relevance.py  nvidia.py  similarity_clustering.py  stripe.py  uber.py
tests/: test_smoke.py
