[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-ml-projects"
version = "0.1.0"
description = "Five synthetic, end-to-end ML projects inspired by production engineering blogs."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "networkx>=3.0",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "huggingface_hub>=0.23,<1.0",
  "gradio==4.44.1",
]

[tool.setuptools.packages.find]
where = ["src"]
